# arrow-rsc

./: .env_example  .gitignore  DEPLOYMENT.md  README.md  index.html  load_all_models.py  main.py  manage.py  move_models_origin_fields.py  pyproject.toml  requirements.txt  save_all_models.py
arrow_rsc/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
info_pages/: admin.py  models.py  translation.py
info_pages/templates/info_pages/: about_us.html  contacts.html  legal.html  partners.html  waranties.html
locale/az/LC_MESSAGES/: django.po
locale/by/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/pl/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
static_common/main/css/: background_styles.css
templates/: apply_modal.html  base.html  footer.html  language_modal.html
vacancy/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
vacancy/migrations/: 0021_vacancy_required_people_count.py  0022_language_vacancy_communication_languages.py  0023_language_name_az_language_name_en_language_name_pl_and_more.py
vacancy/templates/vacancy/: item.html  list.html
