[project]
name = "arrow-rsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-gsheets>=0.0.10",
    "django-imagekit>=5.0.0",
    "django-modeltranslation>=0.19.16",
    "django-rest-framework>=0.1.0",
    "django-tinymce>=4.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
